# adaptive-edge-runtime

./: .gitignore  AGENTS.md  README.md  pytest.ini  scope.md
docs/: architecture.md  decisions.md  esp32s3-setup.md  protocol.md  roadmap.md  wireless-phase4-setup.md
experiments/results/: README.md
experiments/traces/: README.md
firmware/esp32s3/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/esp32s3/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cc  ble_event_receiver.cc  ble_event_receiver.h  event_source.cc  event_source.h  host_client.cc  host_client.h  local_inference.cc  local_inference.h  runtime_types.h
firmware/nrf52840/: CMakeLists.txt  README.md  prj.conf
firmware/nrf52840/src/: main.c
host/: __init__.py
host/controller/: __init__.py  app.py  decision.py  logging_store.py  metrics.py  models.py  requirements.txt
host/inference/: README.md
host/monitoring/: README.md
models/exported/: README.md
models/training/: README.md
scripts/: simulate_events.py
tests/: test_controller.py
